# routes/discount_routes.js
@@ -8,6 +8,8 @@ const { auth } = require('../middleware/auth');
 routes.post('/createDiscount',auth, discount.createDiscount);
 routes.post('/createDiscountFreeItems',auth, discount.createDiscountFreeItems);
 routes.post('/createDiscountItemPrices',auth, discount.createDiscountItemPrices);
-routes.get('/getDiscount',auth, discount.getDiscount);
+routes.get('/ListRestaurentDiscounts',auth, discount.ListRestaurentDiscounts);
+routes.get('/ViewRestaurentDiscounts',auth, discount.ViewRestaurentDiscounts);
+routes.delete('/deleteDiscount',auth, discount.deleteDiscount);
 
 exports.routes = routes;
